--- a/src/components/LogIn/login.css
+++ b/src/components/LogIn/login.css
@@ -1,3 +1,33 @@
-form {
-    
+
+
+.modal-label {
+    margin: 1em;
 }
+
+.button-login {
+    font-family: SourceCodePro;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-login:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
