--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'SourceCodePro';
-  src:local('SourceCodePro'), url('./fonts/SourceCodePro-Italic-VariableFont_wght.ttf') format('truetype');
+  src:local('SourceCodePro'), url('./fonts/Aboreto-Regular.ttf') format('truetype');
   font-weight: normal;
 }
 
