--- a/src/pages/ProductDisplay/product.css
+++ b/src/pages/ProductDisplay/product.css
@@ -14,7 +14,7 @@
     margin-bottom: 10em;
     width: fit-content;
     height: 30em;
-    text-shadow: 4px 4px black;
+    text-shadow: 3px 6px black;
     /* box-shadow: 6px 6px 20px rgba(0,0,0,.3); */
 }
 
@@ -25,7 +25,7 @@
     border-bottom: 2px solid white;
 }
 
-.product-card img{
+.product-img {
     width: 20em;
     height: 20em;
     border-radius: 4px;
