--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -33,8 +33,9 @@
 }
 
 @media screen and (max-width: 480px) {
-    .product-card img {
-      max-width: 15em;
+    .card-img {
+      max-width: 25em;
+      max-height: 20em;
     }
     .product-card {
         width: 85%;
