--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -14,7 +14,7 @@
     margin-bottom: 10em;
     width: fit-content;
     height: 30em;
-    text-shadow: 4px 4px black;
+    font-size: .7em;
     /* box-shadow: 6px 6px 20px rgba(0,0,0,.3); */
 }
 
